--- a/zoomcasts.html
+++ b/zoomcasts.html
@@ -109,11 +109,12 @@
 					<h2 id="positionality">Positionality</h2>
 					<p><strong>Convenor:</strong> Pearl Chaozon Bauer</p>
 					<p><strong>Overview:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed laoreet odio non ligula suscipit elementum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus elementum porttitor metus, quis sollicitudin ligula blandit ut. Curabitur tempor mi et urna aliquam, vitae sollicitudin eros tristique.</p>
-					<p><strong>Speakers</strong>
+					<p><a href="">Cluster Introduction</a></p>
+					<p><em>Speakers</em>
 							<ol>
-								<li>Speaker(s) 1 (Date)</li>
-								<li>Speaker(s) 2 (Date)</li>
-								<li>Speaker(s) 3 (Date)</li>
+								<li><a href="">Speaker(s) 1</a> (Date)</li>
+								<li><a href="">Speaker(s) 2</a> (Date)</li>
+								<li><a href="">Speaker(s) 3</a> (Date)</li>
 							</ol>
 					</p>
 				</section>
@@ -122,11 +123,12 @@
 					<h2 id="literary">Beyond the Literary</h2>
 					<p><strong>Convenor:</strong> Ryan Fong</p>
 					<p><strong>Overview:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed laoreet odio non ligula suscipit elementum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus elementum porttitor metus, quis sollicitudin ligula blandit ut. Curabitur tempor mi et urna aliquam, vitae sollicitudin eros tristique.</p>
-					<p><strong>Speakers</strong>
+					<p><a href="">Cluster Introduction</a></p>
+					<p><em>Speakers</em>
 							<ol>
-								<li>Speaker(s) 1 (Date)</li>
-								<li>Speaker(s) 2 (Date)</li>
-								<li>Speaker(s) 3 (Date)</li>
+								<li><a href="">Speaker(s) 1</a> (Date)</li>
+								<li><a href="">Speaker(s) 2</a> (Date)</li>
+								<li><a href="">Speaker(s) 3</a> (Date)</li>
 							</ol>
 					</p>
 				</section>
