--- a/zoomcasts.html
+++ b/zoomcasts.html
@@ -29,6 +29,19 @@
 		</script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>
+		<style>
+			/* @media only screen and (min-width: 992px){
+				.cluster main section{
+					margin: 1em;
+					max-width: 500px;
+					flex: 1 0 50%;
+				}
+				.cluster main section:first-child{
+					flex: 0 1 100%;
+					max-width: 700px;
+				}
+			} */
+		</style>
 	</head>
 
 	<!-- HTML code in this file adapted from Adrian S. Wisnicki's One More Voice website (https://onemorevoice.org/); released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
@@ -84,7 +97,7 @@
 
 			<main id="main">
 
-				<section aria-labelledby="menu">
+				<!-- <section aria-labelledby="menu">
 					<h2 id="menu">Menu</h2>
 					<div>
 						<ol>
@@ -97,39 +110,44 @@
 							</li>
 						</ol>
 					</div>
-				</section>
+				</section> -->
 
 				<section aria-labelledby="overview">
 					<h2 id="overview"><i class="fa fa-play-circle" aria-hidden="true"></i> Zoomcasts</h2>
 					<p><strong>Introduction</strong></p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur convallis odio ac nisi euismod sodales. Cras malesuada magna a leo aliquet venenatis. Nulla in mi et elit vehicula fermentum eget at ligula. Integer metus nisi, dictum vulputate urna nec, pharetra finibus metus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur condimentum sem sed augue vestibulum mattis. Ut vehicula, purus vitae rutrum maximus, libero nibh consectetur odio, ac volutpat libero ipsum ut sem. Phasellus blandit, quam ac efficitur elementum, enim mauris accumsan mi, at maximus erat elit in ante.</p>
-				</section>
-
-				<section aria-labelledby="positionality">
-					<h2 id="positionality">Positionality</h2>
-					<p><strong>Convenor:</strong> Pearl Chaozon Bauer</p>
-					<p><strong>Overview:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed laoreet odio non ligula suscipit elementum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus elementum porttitor metus, quis sollicitudin ligula blandit ut. Curabitur tempor mi et urna aliquam, vitae sollicitudin eros tristique.</p>
-					<p><a href="">Cluster Introduction</a></p>
-					<p><em>Speakers</em>
+					<p>As one of the forms of content that we’re generating for this site, these Zoomcasts are meant to be a mechanism that will allow us to stage conversations, to think together about our classroom practices and about our processes of learning (and un-learning) as teachers.  The Zoomcasts explore how we can grow together as a community of scholars and learn from one another – especially in moving beyond the boundaries of our field and training.</p>
+					
+					<!-- <div>
+						<p><em>Topic Clusters</em>
 							<ol>
-								<li><a href="">Speaker(s) 1</a> (Date)</li>
-								<li><a href="">Speaker(s) 2</a> (Date)</li>
-								<li><a href="">Speaker(s) 3</a> (Date)</li>
+								<li><a href="#positionality">Positionality</a></li>
+								<li><a href="#literary">Beyond the Literary</a></li>
 							</ol>
-					</p>
+						</p>
+					</div> -->
 				</section>
 
 				<section aria-labelledby="literary">
 					<h2 id="literary">Beyond the Literary</h2>
 					<p><strong>Convenor:</strong> Ryan Fong</p>
-					<p><strong>Overview:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed laoreet odio non ligula suscipit elementum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus elementum porttitor metus, quis sollicitudin ligula blandit ut. Curabitur tempor mi et urna aliquam, vitae sollicitudin eros tristique.</p>
-					<p><a href="">Cluster Introduction</a></p>
+					<p><strong>Overview:</strong> This cluster of Zoomcasts highlights one strategy of undisciplining Victorian studies and our syllabi: looking beyond and challenging traditional conceptions of the “literary.”  While reading novels, poetry, drama, and prose will undoubtedly remain important to our work, these forms can problematically limit our ability to recognize and understand the many different ways that Indigenous, occupied, and non-white communities expressed themselves aesthetically in nineteenth century Britain and its colonies.  Our conversations focus on ways that we can alter our syllabi and pedagogical approaches in widening the scope of our classrooms in this way.</p>
 					<p><em>Speakers</em>
-							<ol>
-								<li><a href="">Speaker(s) 1</a> (Date)</li>
-								<li><a href="">Speaker(s) 2</a> (Date)</li>
-								<li><a href="">Speaker(s) 3</a> (Date)</li>
-							</ol>
+						<ol>
+							<li><a href="">Jason Rudy</a> (February 24, 2021)</li>
+							<li><a href="">Speaker(s) 2</a> (Date)</li>
+						</ol>
+					</p>
+				</section>
+
+				<section aria-labelledby="positionality">
+					<h2 id="positionality">Positionality</h2>
+					<p><strong>Convenor:</strong> Pearl Chaozon Bauer</p>
+					<p><strong>Overview:</strong> This cluster of Zoomcasts begins with our journeys as scholars initially trained in a national literature that has been integral to producing fantasies of white British superiority and, more importantly, why we advocate to "undiscipline" Victorian studies as a way to inspire new modes of antiracist teaching in our classroom spaces. Because these reflections come from our personal experiences, we don't intend to speak on behalf of others and are sharing from the position of our own identities, bodies, institutional locations, and backgrounds as a way to spark thought and discussion.</p>
+					<p><em>Speakers</em>
+						<ol>
+							<li><a href="">Tricia Lootens</a> (January 29, 2021)</li>
+							<li><a href="">Zarena Aslami</a> (March 17, 2021)</li>
+						</ol>
 					</p>
 				</section>
 
