--- a/zoomcasts.html
+++ b/zoomcasts.html
@@ -48,7 +48,7 @@
 	<!-- Informed throughout by https://w3c.github.io/aria-practices/examples/ -->
 
 	<body class="essay">
-		<div class="text-container cluster">
+		<div class="text-container cluster zoomcasts">
 
 			<!-- nav1 adapted from https://webaim.org/techniques/skipnav/ -->
 			<nav id="nav0">
@@ -112,9 +112,13 @@
 					</div>
 				</section> -->
 
-				<section aria-labelledby="overview">
-					<h2 id="overview"><i class="fa fa-play-circle" aria-hidden="true"></i> Zoomcasts</h2>
-					<p><strong>Introduction</strong></p>
+				<section aria-labelledby="level-2-title">
+					<h2 id="level-2-title"><i class="fa fa-play-circle" aria-hidden="true"></i> Zoomcasts</h2>
+				</section>
+
+				<section aria-labelledby="introduction">
+					<h2 id="introduction">Introduction</h2>
+					<!-- <p><strong>Introduction</strong></p> -->
 					<p>As one of the forms of content that we’re generating for this site, these Zoomcasts are meant to be a mechanism that will allow us to stage conversations, to think together about our classroom practices and about our processes of learning (and un-learning) as teachers.  The Zoomcasts explore how we can grow together as a community of scholars and learn from one another – especially in moving beyond the boundaries of our field and training.</p>
 					
 					<!-- <div>
