--- a/zoomcasts.html
+++ b/zoomcasts.html
@@ -29,19 +29,6 @@
 		</script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>
-		<style>
-			/* @media only screen and (min-width: 992px){
-				.cluster main section{
-					margin: 1em;
-					max-width: 500px;
-					flex: 1 0 50%;
-				}
-				.cluster main section:first-child{
-					flex: 0 1 100%;
-					max-width: 700px;
-				}
-			} */
-		</style>
 	</head>
 
 	<!-- HTML code in this file adapted from Adrian S. Wisnicki's One More Voice website (https://onemorevoice.org/); released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
@@ -97,38 +84,13 @@
 
 			<main id="main">
 
-				<!-- <section aria-labelledby="menu">
-					<h2 id="menu">Menu</h2>
-					<div>
-						<ol>
-							<li><a href="#overview">Zoomcasts: Introduction</a></li>
-							<li>Topic Clusters
-								<ol style="list-style: lower-alpha;">
-									<li><a href="#positionality">Positionality</a></li>
-									<li><a href="#literary">Beyond the Literary</a></li>
-								</ol>
-							</li>
-						</ol>
-					</div>
-				</section> -->
-
 				<section aria-labelledby="level-2-title">
 					<h2 id="level-2-title"><i class="fa fa-play-circle" aria-hidden="true"></i> Zoomcasts</h2>
 				</section>
 
 				<section aria-labelledby="introduction">
 					<h2 id="introduction">Introduction</h2>
-					<!-- <p><strong>Introduction</strong></p> -->
 					<p>As one of the forms of content that we’re generating for this site, these Zoomcasts are meant to be a mechanism that will allow us to stage conversations, to think together about our classroom practices and about our processes of learning (and un-learning) as teachers.  The Zoomcasts explore how we can grow together as a community of scholars and learn from one another – especially in moving beyond the boundaries of our field and training.</p>
-					
-					<!-- <div>
-						<p><em>Topic Clusters</em>
-							<ol>
-								<li><a href="#positionality">Positionality</a></li>
-								<li><a href="#literary">Beyond the Literary</a></li>
-							</ol>
-						</p>
-					</div> -->
 				</section>
 
 				<section aria-labelledby="literary">
@@ -146,7 +108,7 @@
 				<section aria-labelledby="positionality">
 					<h2 id="positionality">Positionality</h2>
 					<p><strong>Convenor:</strong> Pearl Chaozon Bauer</p>
-					<p><strong>Overview:</strong> This cluster of Zoomcasts begins with our journeys as scholars initially trained in a national literature that has been integral to producing fantasies of white British superiority and, more importantly, why we advocate to "undiscipline" Victorian studies as a way to inspire new modes of antiracist teaching in our classroom spaces. Because these reflections come from our personal experiences, we don't intend to speak on behalf of others and are sharing from the position of our own identities, bodies, institutional locations, and backgrounds as a way to spark thought and discussion.</p>
+					<p><strong>Overview:</strong> This cluster of Zoomcasts begins with our journeys as scholars initially trained in a national literature that has been integral to producing fantasies of white British superiority and, more importantly, why we advocate to “undiscipline” Victorian studies as a way to inspire new modes of antiracist teaching in our classroom spaces. Because these reflections come from our personal experiences, we don't intend to speak on behalf of others and are sharing from the position of our own identities, bodies, institutional locations, and backgrounds as a way to spark thought and discussion.</p>
 					<p><em>Speakers</em>
 						<ol>
 							<li><a href="">Tricia Lootens</a> (January 29, 2021)</li>
