--- a/lootens.html
+++ b/lootens.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Positionality Zoomcast #1 | Undisciplining the Victorian Classroom</title>
+		<title>Zoomcast with Tricia Lootens | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -85,10 +85,10 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="positionality-01">
-					<h2 id="positionality-01">Positionality Zoomcast #1</h2>
+					<!-- <h2 id="positionality-01">UVC Zoomcast with Tricia Lootens</h2> -->
 
 					<div class="wrapper" aria-labelledby="">
-						<div id="" class="youtube" tabindex="0" data-embed="BHACKCNDMW8" data-title="" data-alt="">
+						<div id="" class="youtube" tabindex="0" data-embed="Oq--vvowN6Q" data-title="" data-alt="">
 							<nav class="skipcontrols" aria-labelledby="skip-controls">
 								<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
 							</nav>
@@ -96,12 +96,17 @@
 						</div>
 					</div>
 
-					<p id="text"><strong>Speakers:</strong> Tricia Lootens (featured speaker), Pearl Chaozon Bauer</p>
+					<p id="text"><strong>Speakers:</strong> Tricia Lootens (guest), Pearl Chaozon Bauer (host)</p>
 					<p><strong>Date:</strong> January 29, 2021</p>
 					<p><strong>Length:</strong> 31:31</p>	
-					<p><strong>Overview:</strong> As part of Pearl Chaozon Bauer’s series on positionality in a field that desperately needs undisciplining, Chaozon Bauer interviews Tricia Lootens, Josiah Meigs Distinguished Teaching Professor of English at the University of Georgia. In 2005, Lootens’ questionings of longstanding practices of “writing Victorian Studies white,” which would eventually shape her Transatlantic <em>Political Poetess</em> (2017), began extending to engagements with the writing and reception of Indian poet, translator, critic, and novelist Toru Dutt. A member of the national Historical Poetics Working Group, Lootens was co-organizer, with Brigitte Fielder, Ryan Fong, and Jason Rudy, of the Summer 2020 virtual Dickens Universe Conference, which gathered African-Americanists and nineteenth-century British literature specialists to reflect on the critical pairing of Charles Dickens’s <em>David Copperfield</em> with Frances E. W. Harper’s <em>Iola Leroy</em>, a process planned to continue, if possible, in-person, in Summer 2022. In this zoomcast interview, we address Tricia's academic journey, how our students inform our changing pedagogies, and a few thoughts about trying to negotiate relations to the precarity of higher education, particularly as it affects our most structurally-vulnerable colleagues.</p>
+					<p><strong>Zoomcast Overview:</strong> Chaozon Bauer interviews Tricia Lootens, Josiah Meigs Distinguished Teaching Professor of English at the University of Georgia. In 2005, Lootens’ questionings of longstanding practices of “writing Victorian Studies white,” which would eventually shape her Transatlantic <em>Political Poetess</em> (2017), began extending to engagements with the writing and reception of Indian poet, translator, critic, and novelist Toru Dutt. A member of the national Historical Poetics Working Group, Lootens was co-organizer, with Brigitte Fielder, Ryan Fong, and Jason Rudy, of the Summer 2020 virtual Dickens Universe Conference, which gathered African-Americanists and nineteenth-century British literature specialists to reflect on the critical pairing of Charles Dickens’s <em>David Copperfield</em> with Frances E. W. Harper’s <em>Iola Leroy</em>, a process planned to continue, if possible, in-person, in Summer 2022. In this zoomcast interview, we address Tricia's academic journey, how our students inform our changing pedagogies, and a few thoughts about trying to negotiate relations to the precarity of higher education, particularly as it affects our most structurally-vulnerable colleagues.</p>
 
-					<p><strong>Featured Speaker Biography:</strong> Dr. Tricia Lootens, Josiah Meigs Distinguished Teaching Professor of English at the University of Georgia, is a former collective member of <em>off our backs: a women’s newsjournal.</em> The author of <em>Political Poetess: Victorian Femininity, Race, and the Legacy of Separate Spheres (Princeton, </em>2017) as well as of <em>Lost Saints</em> (University Press of Virginia, 1996), Lootens first started publishing and teaching on connections between Victorian poetry and the Black Atlantic in the 1990s. More recently, her “Looking Beyond [and Before] <em>Ancient Ballads</em>: Toru Dutt’s <em>Sheaf </em>and the Force of Abolition Time” in <em>Victorian Studies</em>, 2019 speaks to one aspect of linking Victorian, Transatlantic, and transimperial poetic studies; her 2011 Longman Cultural Edition of Rudyard Kipling's <em>Kim, </em>co-edited with Paula M. Krebs represents another.</p>
+					<p><strong>Positionality Series:</strong> This cluster of Zoomcasts begins with our journeys as scholars initially trained in a national literature that has been integral to producing fantasies of white British superiority and, more importantly, why we advocate to “undiscipline” Victorian studies as a way to inspire new modes of antiracist teaching in our classroom spaces. Because these reflections come from our personal experiences, we don't intend to speak on behalf of others and are sharing from the position of our own identities, bodies, institutional locations, and backgrounds as a way to spark thought and discussion.</p>
+					
+					<!-- <p><strong>Beyond the Literary Series:</strong> This cluster of Zoomcasts highlights one strategy of undisciplining Victorian studies and our syllabi: looking beyond and challenging traditional conceptions of the “literary.” While reading novels, poetry, drama, and prose will undoubtedly remain important to our work, these forms can problematically limit our ability to recognize and understand the many different ways that Indigenous, occupied, and non-white communities expressed themselves aesthetically in nineteenth century Britain and its colonies. Our conversations focus on ways that we can alter our syllabi and pedagogical approaches in widening the scope of our classrooms in this way.</p> -->
+
+					<p><strong>Guest Biography:</strong> Dr. Tricia Lootens, Josiah Meigs Distinguished Teaching Professor of English at the University of Georgia, is a former collective member of <em>off our backs: a women’s newsjournal.</em> The author of <em>Political Poetess: Victorian Femininity, Race, and the Legacy of Separate Spheres (Princeton, </em>2017) as well as of <em>Lost Saints</em> (University Press of Virginia, 1996), Lootens first started publishing and teaching on connections between Victorian poetry and the Black Atlantic in the 1990s. More recently, her “Looking Beyond [and Before] <em>Ancient Ballads</em>: Toru Dutt’s <em>Sheaf </em>and the Force of Abolition Time” in <em>Victorian Studies</em>, 2019 speaks to one aspect of linking Victorian, Transatlantic, and transimperial poetic studies; her 2011 Longman Cultural Edition of Rudyard Kipling's <em>Kim, </em>co-edited with Paula M. Krebs represents another.</p>
+
 			</main>
 			
 			<footer id="footer">
