--- a/zoomcasts.html
+++ b/zoomcasts.html
@@ -90,31 +90,23 @@
 
 				<section aria-labelledby="introduction">
 					<h2 id="introduction">Introduction</h2>
-					<p>As one of the forms of content that we’re generating for this site, these Zoomcasts are meant to be a mechanism that will allow us to stage conversations, to think together about our classroom practices and about our processes of learning (and un-learning) as teachers.  The Zoomcasts explore how we can grow together as a community of scholars and learn from one another – especially in moving beyond the boundaries of our field and training.</p>
+					<p>These Zoomcasts serve as a mechanism that allows us to stage conversations around specific themes, think together about our classroom practices, and reflect on our processes of learning (and un-learning) as teachers. In conversation with guest speakers, we explore how we can grow together as a community of scholars and learn from one another – especially in moving beyond the boundaries of our field and training.</p>
 				</section>
 
 				<section aria-labelledby="literary">
 					<h2 id="literary">Beyond the Literary</h2>
-					<p><strong>Convenor:</strong> Ryan Fong</p>
-					<p><strong>Overview:</strong> This cluster of Zoomcasts highlights one strategy of undisciplining Victorian studies and our syllabi: looking beyond and challenging traditional conceptions of the “literary.”  While reading novels, poetry, drama, and prose will undoubtedly remain important to our work, these forms can problematically limit our ability to recognize and understand the many different ways that Indigenous, occupied, and non-white communities expressed themselves aesthetically in nineteenth century Britain and its colonies.  Our conversations focus on ways that we can alter our syllabi and pedagogical approaches in widening the scope of our classrooms in this way.</p>
-					<p><em>Speakers</em>
-						<ol>
-							<li><a href="">Jason Rudy</a> (February 24, 2021)</li>
-							<li><a href="">Speaker(s) 2</a> (Date)</li>
-						</ol>
-					</p>
+					<ul>
+						<li><img/><span>Jason Rudy</span></li>
+						<li><img/><span>Jennifer Hayward, Michelle Prain Brice, and Jessie Reeder</span></li>
+					</ul>
 				</section>
 
 				<section aria-labelledby="positionality">
 					<h2 id="positionality">Positionality</h2>
-					<p><strong>Convenor:</strong> Pearl Chaozon Bauer</p>
-					<p><strong>Overview:</strong> This cluster of Zoomcasts begins with our journeys as scholars initially trained in a national literature that has been integral to producing fantasies of white British superiority and, more importantly, why we advocate to “undiscipline” Victorian studies as a way to inspire new modes of antiracist teaching in our classroom spaces. Because these reflections come from our personal experiences, we don't intend to speak on behalf of others and are sharing from the position of our own identities, bodies, institutional locations, and backgrounds as a way to spark thought and discussion.</p>
-					<p><em>Speakers</em>
-						<ol>
-							<li><a href="">Tricia Lootens</a> (January 29, 2021)</li>
-							<li><a href="">Zarena Aslami</a> (March 17, 2021)</li>
-						</ol>
-					</p>
+					<ul>
+						<li><a href="lootens.html" alt="Head and shoulders image of Tricia Lootens" title="Tricia Lootens"><img src="img/zoomcasts/lootens.png"/><span>Tricia Lootens</span></a></li>
+						<li><img/><span>Zarena Aslami</span></li>
+					</ul>
 				</section>
 
 			</main>
