--- a/lootens.html
+++ b/lootens.html
@@ -87,8 +87,8 @@
 			<main id="main" aria-labelledby="positionality-01">
 					<!-- <h2 id="positionality-01">UVC Zoomcast with Tricia Lootens</h2> -->
 
-					<div class="wrapper" aria-labelledby="">
-						<div id="" class="youtube" tabindex="0" data-embed="Oq--vvowN6Q" data-title="" data-alt="">
+					<div class="wrapper" aria-labelledby="lootens">
+						<div id="lootens" class="youtube" tabindex="0" data-embed="Oq--vvowN6Q" data-title="" data-alt="">
 							<nav class="skipcontrols" aria-labelledby="skip-controls">
 								<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
 							</nav>
@@ -106,7 +106,6 @@
 					<!-- <p><strong>Beyond the Literary Series:</strong> This cluster of Zoomcasts highlights one strategy of undisciplining Victorian studies and our syllabi: looking beyond and challenging traditional conceptions of the “literary.” While reading novels, poetry, drama, and prose will undoubtedly remain important to our work, these forms can problematically limit our ability to recognize and understand the many different ways that Indigenous, occupied, and non-white communities expressed themselves aesthetically in nineteenth century Britain and its colonies. Our conversations focus on ways that we can alter our syllabi and pedagogical approaches in widening the scope of our classrooms in this way.</p> -->
 
 					<p><strong>Guest Biography:</strong> Dr. Tricia Lootens, Josiah Meigs Distinguished Teaching Professor of English at the University of Georgia, is a former collective member of <em>off our backs: a women’s newsjournal.</em> The author of <em>Political Poetess: Victorian Femininity, Race, and the Legacy of Separate Spheres (Princeton, </em>2017) as well as of <em>Lost Saints</em> (University Press of Virginia, 1996), Lootens first started publishing and teaching on connections between Victorian poetry and the Black Atlantic in the 1990s. More recently, her “Looking Beyond [and Before] <em>Ancient Ballads</em>: Toru Dutt’s <em>Sheaf </em>and the Force of Abolition Time” in <em>Victorian Studies</em>, 2019 speaks to one aspect of linking Victorian, Transatlantic, and transimperial poetic studies; her 2011 Longman Cultural Edition of Rudyard Kipling's <em>Kim, </em>co-edited with Paula M. Krebs represents another.</p>
-
 			</main>
 			
 			<footer id="footer">
