--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						<div id="myCarousel-items" class="carousel-items" aria-live="off">
 							<div class="carousel-item active" role="group" aria-roledescription="slide" aria-label="1 of 4">
 								<div class="carousel-image">
-										<img src="img/uvc_0003-deriv-900px.jpg" srcset="img/uvc_0003-deriv-1800px.jpg 1800w, img/uvc_0003-deriv-1536px.jpg 1536w, img/uvc_0003-deriv-1280px.jpg 1280w, img/uvc_0003-deriv-900px.jpg 900w, img/uvc_0003-deriv-768px.jpg 768w, img/uvc_0003-deriv-640px.jpg 640w, img/uvc_0003-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;">
+										<img src="img/home/uvc_0003-deriv-900px.jpg" srcset="img/home/uvc_0003-deriv-1800px.jpg 1800w, img/home/uvc_0003-deriv-1536px.jpg 1536w, img/home/uvc_0003-deriv-1280px.jpg 1280w, img/home/uvc_0003-deriv-900px.jpg 900w, img/home/uvc_0003-deriv-768px.jpg 768w, img/home/uvc_0003-deriv-640px.jpg 640w, img/home/uvc_0003-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;">
 								</div>
 								<div class="carousel-caption">
 									<p>
@@ -138,7 +138,7 @@
 							</div>
 							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="2 of 4">
 								<div class="carousel-image">
-										<img src="img/uvc_0002-deriv-900px.jpg" srcset="img/uvc_0002-deriv-1800px.jpg 1800w, img/uvc_0002-deriv-1536px.jpg 1536w, img/uvc_0002-deriv-1280px.jpg 1280w, img/uvc_0002-deriv-900px.jpg 900w, img/uvc_0002-deriv-768px.jpg 768w, img/uvc_0002-deriv-640px.jpg 640w, img/uvc_0002-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="People, many in formal attire, standing outside at night with with lights and signs overhead.">
+										<img src="img/home/uvc_0002-deriv-900px.jpg" srcset="img/home/uvc_0002-deriv-1800px.jpg 1800w, img/home/uvc_0002-deriv-1536px.jpg 1536w, img/home/uvc_0002-deriv-1280px.jpg 1280w, img/home/uvc_0002-deriv-900px.jpg 900w, img/home/uvc_0002-deriv-768px.jpg 768w, img/home/uvc_0002-deriv-640px.jpg 640w, img/home/uvc_0002-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="People, many in formal attire, standing outside at night with with lights and signs overhead.">
 								</div>
 								<div class="carousel-caption">
 									<p>
@@ -150,7 +150,7 @@
 							</div>					
 							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="3 of 4">
 								<div class="carousel-image">
-										<img src="img/uvc_0004-deriv-900px.jpg" srcset="img/uvc_0004-deriv-900px.jpg 900w, img/uvc_0004-deriv-768px.jpg 768w, img/uvc_0004-deriv-640px.jpg 640w, img/uvc_0004-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
+										<img src="img/home/uvc_0004-deriv-900px.jpg" srcset="img/home/uvc_0004-deriv-900px.jpg 900w, img/home/uvc_0004-deriv-768px.jpg 768w, img/home/uvc_0004-deriv-640px.jpg 640w, img/home/uvc_0004-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
 								</div>
 								<div class="carousel-caption">
 									<p>
@@ -162,7 +162,7 @@
 							</div>	
 							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="4 of 4">
 								<div class="carousel-image">
-										<img src="img/uvc_0001-deriv-900px.jpg" srcset="img/uvc_0001-deriv-900px.jpg 900w, img/uvc_0001-deriv-768px.jpg 768w, img/uvc_0001-deriv-640px.jpg 640w, img/uvc_0001-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
+										<img src="img/home/uvc_0001-deriv-900px.jpg" srcset="img/home/uvc_0001-deriv-900px.jpg 900w, img/home/uvc_0001-deriv-768px.jpg 768w, img/home/uvc_0001-deriv-640px.jpg 640w, img/home/uvc_0001-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
 								</div>
 								<div class="carousel-caption">
 									<p>
@@ -198,7 +198,7 @@
 				</section>
 				
 				<!-- <div class="image-wrapper">
-					<img class="image-border" loading="lazy" src="img/uvc_0005-deriv-1640px.jpg" srcset="img/uvc_0005-deriv-1640px.jpg 1640w, img/uvc_0005-deriv-1244px.jpg 1244w, img/uvc_0005-deriv-864px.jpg 864w, img/uvc_0005-deriv-622px.jpg 622w, img/uvc_0005-deriv-592px.jpg 592w, img/uvc_0005-deriv-432px.jpg 432w, img/uvc_0005-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/).">
+					<img class="image-border" loading="lazy" src="img/home/uvc_0005-deriv-1640px.jpg" srcset="img/home/uvc_0005-deriv-1640px.jpg 1640w, img/home/uvc_0005-deriv-1244px.jpg 1244w, img/home/uvc_0005-deriv-864px.jpg 864w, img/home/uvc_0005-deriv-622px.jpg 622w, img/home/uvc_0005-deriv-592px.jpg 592w, img/home/uvc_0005-deriv-432px.jpg 432w, img/home/uvc_0005-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/).">
 					<div class="image-caption">
 						<p>
 							<a href="#gee">
@@ -210,7 +210,7 @@
 				
 				<section aria-labelledby="call-for-syllabi" id="call">
 					<div class="image-wrapper">
-						<img loading="lazy" src="img/uvc_0006-deriv-1640px.jpg" srcset="img/uvc_0006-deriv-1640px.jpg 1640w, img/uvc_0006-deriv-1244px.jpg 1244w, img/uvc_0006-deriv-864px.jpg 864w, img/uvc_0006-deriv-622px.jpg 622w, img/uvc_0006-deriv-592px.jpg 592w, img/uvc_0006-deriv-432px.jpg 432w, img/uvc_0006-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Work of wool and bark, green and yellow patterns surrounded by yellow and black outlines and fringe." title="Anonymous, “Dance Blanket with Diving Whale and Raven Motifs” (Wool and bark, Northwest Coast of Alaska, United States, c.1880-c.1900 1880), 1961.568., Art Institute of Chicago, Chicago, https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs. Kate S. Buckingham Endowment. CC0 1.0 (https://creativecommons.org/publicdomain/zero/1.0/).">
+						<img loading="lazy" src="img/home/uvc_0006-deriv-1640px.jpg" srcset="img/home/uvc_0006-deriv-1640px.jpg 1640w, img/home/uvc_0006-deriv-1244px.jpg 1244w, img/home/uvc_0006-deriv-864px.jpg 864w, img/home/uvc_0006-deriv-622px.jpg 622w, img/home/uvc_0006-deriv-592px.jpg 592w, img/home/uvc_0006-deriv-432px.jpg 432w, img/home/uvc_0006-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Work of wool and bark, green and yellow patterns surrounded by yellow and black outlines and fringe." title="Anonymous, “Dance Blanket with Diving Whale and Raven Motifs” (Wool and bark, Northwest Coast of Alaska, United States, c.1880-c.1900 1880), 1961.568., Art Institute of Chicago, Chicago, https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs. Kate S. Buckingham Endowment. CC0 1.0 (https://creativecommons.org/publicdomain/zero/1.0/).">
 						<div class="image-caption">
 							<p>
 								<a href="#dance">
@@ -271,7 +271,6 @@
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-		<script src="js/scripts.js?=newVers_0001"></script>
 		<script src="js/carousel-complete.js"></script>
 		<script>
 			// Adapted from https://stackoverflow.com/a/31837264
@@ -287,6 +286,11 @@
 					}
 				})
 			};
+		</script>
+		<script>
+			// Adapted from https://learn.jquery.com/using-jquery-core/document-ready/ and https://stackoverflow.com/a/39179486
+			// Loads JS file only after rest of page has loaded.
+			$(window).on("load",function(){var element=document.createElement("script");element.src="js/scripts.js?=newVers_0001";document.body.appendChild(element)});			
 		</script>
 	</body>
 </html>
