--- a/lootens.html
+++ b/lootens.html
@@ -42,7 +42,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="positionality-01">
-					<!-- <h2 id="positionality-01">UVC Zoomcast with Tricia Lootens</h2> -->
+					<h2 id="positionality-01">Zoomcast with Tricia Lootens</h2>
 
 					<div class="wrapper" aria-labelledby="lootens">
 						<div id="lootens" class="youtube" tabindex="0" data-embed="Oq--vvowN6Q" data-title="" data-alt="">
@@ -73,7 +73,6 @@
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-		<script src="js/scripts.js?=newVers_0001"></script>
 		<script src="js/youtube.js?=newVers_0001"></script>
 		<script>
 			// Adapted from https://stackoverflow.com/a/31837264
@@ -90,5 +89,10 @@
 				})
 			};
 		</script>
+		<script>
+			// Adapted from https://learn.jquery.com/using-jquery-core/document-ready/ and https://stackoverflow.com/a/39179486
+			// Loads JS file only after rest of page has loaded.
+			$(window).on("load",function(){var element=document.createElement("script");element.src="js/scripts.js?=newVers_0001";document.body.appendChild(element)});			
+		</script>		
 	</body>
 </html>
