--- a/zoomcasts.html
+++ b/zoomcasts.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Zoomcasts | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Introduces and organizes in clusters a series of Zoomcasts focused on teaching Victorian Studies through a positive, race-conscious lens." />
+		<meta name="description" content="Introduces and organizes in clusters a series of Zoomcasts inverviews on teaching Victorian Studies through a positive, race-conscious lens." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#1C4C87"/>
@@ -47,23 +47,27 @@
 
 				<section aria-labelledby="introduction">
 					<h2 id="introduction">Introduction</h2>
-					<p>These Zoomcasts serve as a mechanism that allows us to stage conversations around specific themes, think together about our classroom practices, and reflect on our processes of learning (and un-learning) as teachers. In conversation with guest speakers, we explore how we can grow together as a community of scholars and learn from one another – especially in moving beyond the boundaries of our field and training.</p>
+					<p>These Zoomcasts serve as a mechanism for us to stage conversations around specific themes, think together about our classroom practices, and reflect on our processes of learning (and un-learning) as teachers. In conversation with guest speakers, we explore how we can grow together as a community of scholars and learn from one another – especially in moving beyond the boundaries of our field and training.</p>
 				</section>
 
-				<section aria-labelledby="literary">
-					<h2 id="literary">Beyond the Literary</h2>
-					<ul>
-						<li><img/><span>Jason Rudy</span></li>
-						<li><img/><span>Jennifer Hayward, Michelle Prain Brice, and Jessie Reeder</span></li>
-					</ul>
+				<section aria-labelledby="positionality-1">
+					<h2 id="positionality-1">Positionality #1</h2>
+					<div><a href="lootens.html"><img src="img/zoomcasts/lootens.png" alt="Head and shoulders image of Tricia Lootens" title="Tricia Lootens"/><span>Tricia Lootens</span></a></div>
 				</section>
 
-				<section aria-labelledby="positionality">
-					<h2 id="positionality">Positionality</h2>
-					<ul>
-						<li><a href="lootens.html" alt="Head and shoulders image of Tricia Lootens" title="Tricia Lootens"><img src="img/zoomcasts/lootens.png"/><span>Tricia Lootens</span></a></li>
-						<li><img/><span>Zarena Aslami</span></li>
-					</ul>
+				<section aria-labelledby="positionality-2">
+					<h2 id="positionality-2">Positionality #2</h2>
+					<div><a href="aslami.html"><img src="img/zoomcasts/aslami.png" alt="Head and shoulders image of Zarena Aslami" title="Zarena Aslami"/><span>Zarena Aslami</span></a></div>
+				</section>
+
+				<section aria-labelledby="literary-1">
+					<h2 id="literary-1">Beyond the Literary #1</h2>
+					<div><a href="rudy.html"><img src="img/zoomcasts/rudy.png" alt="Head and shoulders image of Jason Rudy" title="Jason Rudy"/><span>Jason Rudy</span></a></div>
+				</section>
+
+				<section aria-labelledby="literary-2">
+					<h2 id="literary-2">Beyond the Literary #2</h2>
+					<div><a href="hayward-reeder-prain-brice.html"><img src="img/zoomcasts/hayward-reeder-prain-brice.png" alt="Head and shoulders images of Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice" title="Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice"/><span>Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice</span></a></div>
 				</section>
 
 			</main>
@@ -76,7 +80,6 @@
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-		<script src="js/scripts.js?=newVers_0001"></script>
 		<script src="js/carousel-complete.js"></script>
 		<script>
 			// Adapted from https://stackoverflow.com/a/31837264
@@ -93,5 +96,10 @@
 				})
 			};
 		</script>
+		<script>
+			// Adapted from https://learn.jquery.com/using-jquery-core/document-ready/ and https://stackoverflow.com/a/39179486
+			// Loads JS file only after rest of page has loaded.
+			$(window).on("load",function(){var element=document.createElement("script");element.src="js/scripts.js?=newVers_0001";document.body.appendChild(element)});			
+		</script>		
 	</body>
 </html>
