--- a/lootens.html
+++ b/lootens.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Zoomcast with Tricia Lootens | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="" />
+		<meta name="description" content="Chaozon Bauer interviews Tricia Lootens to discuss the latter's academic journey, how students inform changing pedagogies, and the precarity of higher ed." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#1C4C87"/>
@@ -45,7 +45,7 @@
 					<h2 id="positionality-01">Zoomcast with Tricia Lootens</h2>
 
 					<div class="wrapper" aria-labelledby="lootens">
-						<div id="lootens" class="youtube" tabindex="0" data-embed="Oq--vvowN6Q" data-title="" data-alt="">
+						<div id="lootens" class="youtube" tabindex="0" data-embed="Oq--vvowN6Q" data-title="Tricia Lootens" data-alt="Head and shoulders image of Tricia Lootens">
 							<nav class="skipcontrols" aria-labelledby="skip-controls">
 								<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
 							</nav>
@@ -56,7 +56,7 @@
 					<p id="text"><strong>Speakers:</strong> Tricia Lootens (guest), Pearl Chaozon Bauer (host)</p>
 					<p><strong>Date:</strong> January 29, 2021</p>
 					<p><strong>Length:</strong> 31:31</p>	
-					<p><strong>Zoomcast Overview:</strong> Chaozon Bauer interviews Tricia Lootens, Josiah Meigs Distinguished Teaching Professor of English at the University of Georgia. In 2005, Lootens’ questionings of longstanding practices of “writing Victorian Studies white,” which would eventually shape her Transatlantic <em>Political Poetess</em> (2017), began extending to engagements with the writing and reception of Indian poet, translator, critic, and novelist Toru Dutt. A member of the national Historical Poetics Working Group, Lootens was co-organizer, with Brigitte Fielder, Ryan Fong, and Jason Rudy, of the Summer 2020 virtual Dickens Universe Conference, which gathered African-Americanists and nineteenth-century British literature specialists to reflect on the critical pairing of Charles Dickens’s <em>David Copperfield</em> with Frances E. W. Harper’s <em>Iola Leroy</em>, a process planned to continue, if possible, in-person, in Summer 2022. In this zoomcast interview, we address Tricia's academic journey, how our students inform our changing pedagogies, and a few thoughts about trying to negotiate relations to the precarity of higher education, particularly as it affects our most structurally-vulnerable colleagues.</p>
+					<p><strong>Zoomcast Overview:</strong> Chaozon Bauer interviews Tricia Lootens, Josiah Meigs Distinguished Teaching Professor of English at the University of Georgia. In 2005, Lootens’ questionings of longstanding practices of “writing Victorian Studies white,” which would eventually shape her Transatlantic <em>Political Poetess</em> (2017), began extending to engagements with the writing and reception of Indian poet, translator, critic, and novelist Toru Dutt. A member of the national Historical Poetics Working Group, Lootens was co-organizer, with Brigitte Fielder, Ryan Fong, and Jason Rudy, of the Summer 2020 virtual Dickens Universe Conference, which gathered African-Americanists and nineteenth-century British literature specialists to reflect on the critical pairing of Charles Dickens’s <em>David Copperfield</em> with Frances E. W. Harper’s <em>Iola Leroy</em>, a process planned to continue, if possible, in-person, in Summer 2022. In this zoomcast interview, we address Tricia's academic journey, how our students inform our changing pedagogies, and raise a few thoughts about trying to negotiate relations to the precarity of higher education, particularly as it affects our most structurally-vulnerable colleagues.</p>
 
 					<p><strong>Positionality Series:</strong> This cluster of Zoomcasts begins with our journeys as scholars initially trained in a national literature that has been integral to producing fantasies of white British superiority and, more importantly, why we advocate to “undiscipline” Victorian studies as a way to inspire new modes of antiracist teaching in our classroom spaces. Because these reflections come from our personal experiences, we don't intend to speak on behalf of others and are sharing from the position of our own identities, bodies, institutional locations, and backgrounds as a way to spark thought and discussion.</p>
 					
