--- a/zoomcasts.html
+++ b/zoomcasts.html
@@ -52,22 +52,22 @@
 
 				<section aria-labelledby="positionality-1">
 					<h2 id="positionality-1">Positionality #1</h2>
-					<div><a href="lootens.html"><img src="img/zoomcasts/lootens.png" alt="Head and shoulders image of Tricia Lootens" title="Tricia Lootens"/><span>Tricia Lootens</span></a></div>
+					<div><a href="lootens.html"><img loading="lazy" src="img/zoomcasts/lootens-930px.jpg" srcset="img/zoomcasts/lootens-1275px.jpg 1275w, img/zoomcasts/lootens-930px.jpg 930w, img/zoomcasts/lootens-816px.jpg 816w, img/zoomcasts/lootens-663px.jpg 663w, img/zoomcasts/lootens-532px.jpg 532w, img/zoomcasts/lootens-465px.jpg 465w, img/zoomcasts/lootens-408px.jpg 408w, img/zoomcasts/lootens-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Tricia Lootens" title="Tricia Lootens"/><span>Tricia Lootens</span></a></div>
 				</section>
 
 				<section aria-labelledby="positionality-2">
 					<h2 id="positionality-2">Positionality #2</h2>
-					<div><a href="aslami.html"><img src="img/zoomcasts/aslami.png" alt="Head and shoulders image of Zarena Aslami" title="Zarena Aslami"/><span>Zarena Aslami</span></a></div>
+					<div><a href="aslami.html"><img loading="lazy" src="img/zoomcasts/aslami-930px.jpg" srcset="img/zoomcasts/aslami-1275px.jpg 1275w, img/zoomcasts/aslami-930px.jpg 930w, img/zoomcasts/aslami-816px.jpg 816w, img/zoomcasts/aslami-663px.jpg 663w, img/zoomcasts/aslami-532px.jpg 532w, img/zoomcasts/aslami-465px.jpg 465w, img/zoomcasts/aslami-408px.jpg 408w, img/zoomcasts/aslami-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Zarena Aslami" title="Zarena Aslami"/><span>Zarena Aslami</span></a></div>
 				</section>
 
 				<section aria-labelledby="literary-1">
 					<h2 id="literary-1">Beyond the Literary #1</h2>
-					<div><a href="rudy.html"><img src="img/zoomcasts/rudy.png" alt="Head and shoulders image of Jason Rudy" title="Jason Rudy"/><span>Jason Rudy</span></a></div>
+					<div><a href="rudy.html"><img loading="lazy" src="img/zoomcasts/rudy-930px.jpg" srcset="img/zoomcasts/rudy-1275px.jpg 1275w, img/zoomcasts/rudy-930px.jpg 930w, img/zoomcasts/rudy-816px.jpg 816w, img/zoomcasts/rudy-663px.jpg 663w, img/zoomcasts/rudy-532px.jpg 532w, img/zoomcasts/rudy-465px.jpg 465w, img/zoomcasts/rudy-408px.jpg 408w, img/zoomcasts/rudy-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Jason Rudy" title="Jason Rudy"/><span>Jason Rudy</span></a></div>
 				</section>
 
 				<section aria-labelledby="literary-2">
 					<h2 id="literary-2">Beyond the Literary #2</h2>
-					<div><a href="hayward-reeder-prain-brice.html"><img src="img/zoomcasts/hayward-reeder-prain-brice.png" alt="Head and shoulders images of Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice" title="Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice"/><span>Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice</span></a></div>
+					<div><a href="hayward-reeder-prain-brice.html"><img loading="lazy" src="img/zoomcasts/hayward-reeder-prain-brice-930px.jpg" srcset="img/zoomcasts/hayward-reeder-prain-brice-1275px.jpg 1275w, img/zoomcasts/hayward-reeder-prain-brice-930px.jpg 930w, img/zoomcasts/hayward-reeder-prain-brice-816px.jpg 816w, img/zoomcasts/hayward-reeder-prain-brice-663px.jpg 663w, img/zoomcasts/hayward-reeder-prain-brice-532px.jpg 532w, img/zoomcasts/hayward-reeder-prain-brice-465px.jpg 465w, img/zoomcasts/hayward-reeder-prain-brice-408px.jpg 408w, img/zoomcasts/hayward-reeder-prain-brice-266px.jpg 266w" alt="Head and shoulders images of Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" title="Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice"/><span>Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice</span></a></div>
 				</section>
 
 			</main>
