--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						<div id="myCarousel-items" class="carousel-items" aria-live="off">
 							<div class="carousel-item active" role="group" aria-roledescription="slide" aria-label="1 of 4">
 								<div class="carousel-image">
-										<img src="img/home/uvc_0003-deriv-900px.jpg" srcset="img/home/uvc_0003-deriv-1800px.jpg 1800w, img/home/uvc_0003-deriv-1536px.jpg 1536w, img/home/uvc_0003-deriv-1280px.jpg 1280w, img/home/uvc_0003-deriv-900px.jpg 900w, img/home/uvc_0003-deriv-768px.jpg 768w, img/home/uvc_0003-deriv-640px.jpg 640w, img/home/uvc_0003-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;">
+										<img src="img/home/uvc_0003-deriv-1200px.jpg" srcset="img/home/uvc_0003-deriv-1800px.jpg 1800w, img/home/uvc_0003-deriv-1650px.jpg 1650w, img/home/uvc_0003-deriv-1500px.jpg 1500w, img/home/uvc_0003-deriv-1350px.jpg 1350w, img/home/uvc_0003-deriv-1200px.jpg 1200w, img/home/uvc_0003-deriv-1050px.jpg 1050w, img/home/uvc_0003-deriv-900px.jpg 900w, img/home/uvc_0003-deriv-750px.jpg 750w, img/home/uvc_0003-deriv-600px.jpg 600w, img/home/uvc_0003-deriv-450px.jpg 450w, img/home/uvc_0003-deriv-300px.jpg 300w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;">
 								</div>
 								<div class="carousel-caption">
 									<p>
@@ -138,7 +138,7 @@
 							</div>
 							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="2 of 4">
 								<div class="carousel-image">
-										<img src="img/home/uvc_0002-deriv-900px.jpg" srcset="img/home/uvc_0002-deriv-1800px.jpg 1800w, img/home/uvc_0002-deriv-1536px.jpg 1536w, img/home/uvc_0002-deriv-1280px.jpg 1280w, img/home/uvc_0002-deriv-900px.jpg 900w, img/home/uvc_0002-deriv-768px.jpg 768w, img/home/uvc_0002-deriv-640px.jpg 640w, img/home/uvc_0002-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="People, many in formal attire, standing outside at night with with lights and signs overhead.">
+										<img src="img/home/uvc_0002-deriv-1200px.jpg" srcset="img/home/uvc_0002-deriv-1800px.jpg 1800w, img/home/uvc_0002-deriv-1650px.jpg 1650w, img/home/uvc_0002-deriv-1500px.jpg 1500w, img/home/uvc_0002-deriv-1350px.jpg 1350w, img/home/uvc_0002-deriv-1200px.jpg 1200w, img/home/uvc_0002-deriv-1050px.jpg 1050w, img/home/uvc_0002-deriv-900px.jpg 900w, img/home/uvc_0002-deriv-750px.jpg 750w, img/home/uvc_0002-deriv-600px.jpg 600w, img/home/uvc_0002-deriv-450px.jpg 450w, img/home/uvc_0002-deriv-300px.jpg 300w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="People, many in formal attire, standing outside at night with with lights and signs overhead.">
 								</div>
 								<div class="carousel-caption">
 									<p>
@@ -150,7 +150,7 @@
 							</div>					
 							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="3 of 4">
 								<div class="carousel-image">
-										<img src="img/home/uvc_0004-deriv-900px.jpg" srcset="img/home/uvc_0004-deriv-900px.jpg 900w, img/home/uvc_0004-deriv-768px.jpg 768w, img/home/uvc_0004-deriv-640px.jpg 640w, img/home/uvc_0004-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
+										<img src="img/home/uvc_0004-deriv-1200px.jpg" srcset="img/home/uvc_0004-deriv-1200px.jpg 1200w, img/home/uvc_0004-deriv-1050px.jpg 1050w, img/home/uvc_0004-deriv-900px.jpg 900w, img/home/uvc_0004-deriv-750px.jpg 750w, img/home/uvc_0004-deriv-600px.jpg 600w, img/home/uvc_0004-deriv-450px.jpg 450w, img/home/uvc_0004-deriv-300px.jpg 300w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
 								</div>
 								<div class="carousel-caption">
 									<p>
@@ -162,7 +162,7 @@
 							</div>	
 							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="4 of 4">
 								<div class="carousel-image">
-										<img src="img/home/uvc_0001-deriv-900px.jpg" srcset="img/home/uvc_0001-deriv-900px.jpg 900w, img/home/uvc_0001-deriv-768px.jpg 768w, img/home/uvc_0001-deriv-640px.jpg 640w, img/home/uvc_0001-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
+										<img src="img/home/uvc_0001-deriv-1050px.jpg" srcset="img/home/uvc_0001-deriv-1050px.jpg 1050w, img/home/uvc_0001-deriv-900px.jpg 900w, img/home/uvc_0001-deriv-750px.jpg 750w, img/home/uvc_0001-deriv-600px.jpg 600w, img/home/uvc_0001-deriv-450px.jpg 450w, img/home/uvc_0001-deriv-300px.jpg 300w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
 								</div>
 								<div class="carousel-caption">
 									<p>
